--- a/LMSGroupOne/Views/Module/CreateModule.cshtml
+++ b/LMSGroupOne/Views/Module/CreateModule.cshtml
@@ -37,14 +37,10 @@
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" /> <input value="Cancel" onClick="history.back()" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
