--- a/LMSGroupOne/Views/Course/Edit.cshtml
+++ b/LMSGroupOne/Views/Course/Edit.cshtml
@@ -6,18 +6,13 @@
 
 <h1>CourseEdit</h1>
 
-<h4>Course</h4>
+<h4>@ViewBag.courseName</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
