--- a/LMSGroupOne/Views/MainNavigation/Create/CreateCourse.cshtml
+++ b/LMSGroupOne/Views/MainNavigation/Create/CreateCourse.cshtml
@@ -3,14 +3,16 @@
 
 
 
+
+
 <h1>Create modal version</h1>
 
 <h4>Course</h4>
 <hr />
 
 <div>
-    <form id="createFormId" >
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <form id="createFormId">
+        <div asp-validation-summary="All" class="text-danger"></div>
         <div class="form-group">
             <label asp-for="Name" class="control-label"></label>
             <input asp-for="Name" class="form-control" />
@@ -30,12 +32,13 @@
             <label asp-for="EndDate" class="control-label"></label>
             <input asp-for="EndDate" class="form-control" />
             <span asp-validation-for="EndDate" class="text-danger"></span>
-        </div>        
+        </div>
     </form>
 </div>
 
 
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
 }
+
