--- a/LMSGroupOne/Views/Home/EditAccount.cshtml
+++ b/LMSGroupOne/Views/Home/EditAccount.cshtml
@@ -17,37 +17,31 @@
             <div class="form-group">
                 <label asp-for="UserName"></label>
                 <input asp-for="UserName" class="form-control" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
 
             <div class="form-group">
                 <label asp-for="FirstName"></label>
                 <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="LastName"></label>
                 <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Email"></label>
                 <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Role"></label>
                 <select id="role" asp-for="Role" asp-items="@await roleSelectService.GetRolesAsync()" class="form-control">
                     <option value="" hidden disabled selected>Select a role</option>
                 </select>
-                <span asp-validation-for="Role" class="text-danger"></span>
             </div>
             <div class="form-group" id="course">
                 <label asp-for="CourseId"></label>
                 <select asp-for="CourseId" asp-items="@await courseSelectService.GetCoursesAsync()" class="form-control" id="course-select">
-                    <option value="" hidden disabled selected>Select a course</option>
+                    <option value="" hidden disabled selected>Select a course if Student</option>
                 </select>
-                <span asp-validation-for="CourseId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Update account" class="btn btn-primary" />
