--- a/LMSGroupOne/Views/Course/Create.cshtml
+++ b/LMSGroupOne/Views/Course/Create.cshtml
@@ -7,6 +7,7 @@
     <div>
         <form id="formId" asp-action="Create">
             <input type="hidden" asp-for="Success">
+            <input type="hidden" asp-for="ReturnId">
 
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
@@ -30,7 +31,7 @@
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
 
-            @Html.DisplayFor(model => model.Message) 
+            @Html.DisplayFor(model => model.Message)
 
         </form>
     </div>
