--- a/LMSGroupOne/wwwroot/css/site.css
+++ b/LMSGroupOne/wwwroot/css/site.css
@@ -107,3 +107,29 @@ body {
 .img100h {
     height: 100%;
 }
+
+
+
+
+
+
+/* The Modal (background) */
+.centerModal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.centerModalContent {
+    background-color: #fefefe;
+    max-width: 500px;
+}
