--- a/LMSGroupOne/Views/MainNavigation/Module.cshtml
+++ b/LMSGroupOne/Views/MainNavigation/Module.cshtml
@@ -8,7 +8,10 @@
     <h4>Ends: @Model.EndDate</h4>
     <p>@Model.Description</p>
 
-
+    @if (User.IsInRole("Teacher"))
+    {
+        <button id="editButtonId" data-item-id=@Model.Id data-item-type=@((int)(NodeType.course)) class="btn btn-outline-primary">Edit</button>
+    }
 
 
 </div>
