--- a/LMSGroupOne/Views/Delete/DeleteModule.cshtml
+++ b/LMSGroupOne/Views/Delete/DeleteModule.cshtml
@@ -1,14 +1,20 @@
 ﻿@model LMSGroupOne.Models.Delete.DeleteModelView
 
 
-<form id="formId">
-    <input type="hidden" asp-for="Id">
-    <input type="hidden" asp-for="Success">
-    <input type="hidden" asp-for="ReturnId">
 
-    @Model.Name
+<div class="container-fluid justify-content-center">
+    <form id="formId">
+        <input type="hidden" asp-for="Id">
+        <input type="hidden" asp-for="Success">
+        <input type="hidden" asp-for="ReturnId">
 
-    @Model.Message
+        <input type="hidden" asp-for="Name">
 
-    Delete this module?
-</form>
+
+        <h4>@Model.Name</h4>
+        <br>
+        <h6>@Model.Message</h6>
+
+
+    </form>
+</div>
