example search view

--- a/LMSGroupOne/Views/MainNavigation/Index.cshtml
+++ b/LMSGroupOne/Views/MainNavigation/Index.cshtml
@@ -17,6 +17,7 @@
 <script src="~/js/WindowResizer.js" asp-append-version="true"></script>
 <script src="~/js/LoadHomePage.js" asp-append-version="true"></script>
 <script src="~/js/ModalHandler.js" asp-append-version="true"></script>
+<script src="~/js/SearchHandler.js" asp-append-version="true"></script>
 
 
 <div class="container-fluid p-0 m-0" style="min-height:100%; max-height:100%;">
