--- a/LMSGroupOne/Views/_ViewImports.cshtml
+++ b/LMSGroupOne/Views/_ViewImports.cshtml
@@ -6,4 +6,5 @@
 @using LMS.Core.Models.ViewModels.Course
 @using LMS.Core.Models.ViewModels.Activity
 @using LMS.Core.Models.ViewModels.Document
+@using LMS.Core.Models.ViewModels.Assignment
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
