--- a/LMSGroupOne/Views/Document/Upload.cshtml
+++ b/LMSGroupOne/Views/Document/Upload.cshtml
@@ -15,3 +15,10 @@
     </div>
     <input type="submit" value="Upload" />
 </form>
+
+
+
+
+<div class="col-6 bg-primary">
+    <a class="btn btn-danger" asp-area="" asp-controller="Document" asp-action="Index">Document overview + Download USE DOWNLOAD FILE (only works on local files)</a>
+</div>
