--- a/LMSGroupOne/Views/Activity/Create.cshtml
+++ b/LMSGroupOne/Views/Activity/Create.cshtml
@@ -1,4 +1,5 @@
 ﻿@model ActivityCreateViewModel
+@inject IActivityTypeSelectService service 
 
 @{
     ViewData["Title"] = "Create";
@@ -6,11 +7,14 @@
 
 <h1>Create</h1>
 
-<h4>Activity</h4>
+<h4>Activity  for @ViewBag.module</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form id="formId" asp-action="Create">
+            <input type="hidden" asp-for="Success">
+            <input type="hidden" asp-for="ReturnId">
+            <input type="hidden" asp-for="ModuleId" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -21,15 +25,22 @@
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
-            </div>   
-            <div class="form-group">
+            </div>
+
+            @*<div class="form-group">
                 <label asp-for="ActivityTypeId" class="control-label"> Activity types</label>
-                <select asp-for="ActivityTypeId" class="form-control" asp-items="@(new SelectList(ViewBag.activityTypes,"Id","Name"))"></select>
-            </div>
+                <select class="form-control" asp-for="ActivityTypeId" asp-items="@(new SelectList(ViewBag.activityTypes,"Id","Name"))">
+                    <option selected="selected">Select type</option>
+                </select>
+            </div>*@
+
             <div class="form-group">
-                <label asp-for="ModuleId"  class="control-label">Modules</label>
-                <select asp-for="ModuleId" class="form-control" asp-items="@(new SelectList(ViewBag.modules,"Id","Name"))"></select>
+                <label asp-for="ActivityTypeId" class="control-label">Activity types</label>
+                <select class="form-control" asp-for="ActivityTypeId" asp-items="@await service.GetActivityTypesAsync()">
+                    <option selected="selected" value="">Select type</option>
+                </select>
             </div>
+
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
                 <input asp-for="StartDate" class="form-control" />
@@ -40,9 +51,7 @@
                 <input asp-for="EndDate" class="form-control" />
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
+            @Html.DisplayFor(model => model.Message)
         </form>
     </div>
 </div>
