--- a/LMSGroupOne/Views/Activity/Edit.cshtml
+++ b/LMSGroupOne/Views/Activity/Edit.cshtml
@@ -13,6 +13,7 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="ModuleId" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -28,11 +29,7 @@
                 <select asp-for="ActivityTypeId" class="form-control" asp-items="@(new SelectList(ViewBag.activityTypes,"Id","Name"))"></select>
                 <span asp-validation-for="ActivityTypeId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="ModuleId" class="control-label">Modules</label>
-                <select asp-for="ModuleId" class="form-control" asp-items="@(new SelectList(ViewBag.modules,"Id","Name"))"></select>
-                <span asp-validation-for="ModuleId" class="text-danger"></span>
-            </div>
+            
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
                 <input asp-for="StartDate" class="form-control" />
