Index and Edit methods rewritten

--- a/LMSGroupOne/Views/Assignment/Index.cshtml
+++ b/LMSGroupOne/Views/Assignment/Index.cshtml
@@ -35,7 +35,7 @@
                     </td>
                     <td>
                         <a asp-controller="Document" asp-action="UploadActivityDocument" asp-route-id="@item.ActivityId">Upload</a> |
-                        <a asp-controller="Document" asp-action="Details" asp-route-id="@item.ActivityId">Details</a>
+                        <a asp-controller="Assignment" asp-action="Details" asp-route-id="@item.ActivityId">Details</a>
                     </td>
                 </tr>
             }
