--- a/LMSGroupOne/Views/Assignment/Details.cshtml
+++ b/LMSGroupOne/Views/Assignment/Details.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div>
-    <h3 class="sh2 mb-4" style="clear:both;">Details for @Html.DisplayFor(model => model.ActivityName)</h3>
+    <h3 class="sh2 mb-4" style="clear:both;">Assignment "@Html.DisplayFor(model => model.ActivityName)"</h3>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -15,7 +15,7 @@
             @Html.DisplayFor(model => model.ActivityDescription)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Module.Name)
+            @Html.DisplayNameFor(model => model.Module)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Module.Name)
