--- a/LMSGroupOne/Views/Document/UploadActivityDocuments.cshtml
+++ b/LMSGroupOne/Views/Document/UploadActivityDocuments.cshtml
@@ -34,7 +34,7 @@
             <div class="modal-header"><h5 class="modal-title" id="aModalLabel">Result</h5></div>
             <div class="modal-body">@ViewBag.Result</div>
             <div class="modal-footer">
-                <a asp-controller="Document" asp-action="UploadActivityDocuments">More uploads to the same module</a>
+                <a asp-controller="Document" asp-action="UploadActivityDocuments">More uploads to the same activity</a>
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
             </div>
 
