Get authors work

--- a/LMSGroupOne/Views/Authors/GetAuthors.cshtml
+++ b/LMSGroupOne/Views/Authors/GetAuthors.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<LMS.Core.Models.ViewModels.AuthorsViewmodel>
+﻿@model IEnumerable<LMS.Core.Models.ViewModels.API.Author.AuthorsViewModel>
 
 @{
     ViewData["Title"] = "GetAuthors";
