--- a/LMSGroupOne/Views/MainNavigation/Module.cshtml
+++ b/LMSGroupOne/Views/MainNavigation/Module.cshtml
@@ -10,7 +10,7 @@
 
     @if (User.IsInRole("Teacher"))
     {
-        <button id="editButtonId" data-item-id=@Model.Id data-item-type=@((int)(NodeType.course)) class="btn btn-outline-primary">Edit</button>
+        <button id="editButtonId" data-item-id=@Model.Id data-item-type=@((int)(NodeType.module)) class="btn btn-outline-primary">Edit</button>
     }
 
 
