Added Authors work view

--- a/LMSGroupOne/Views/Authors/GetAuthorAndWorks.cshtml
+++ b/LMSGroupOne/Views/Authors/GetAuthorAndWorks.cshtml
@@ -21,27 +21,50 @@
             <th>
                 @Html.DisplayNameFor(model => model.Age)
             </th>
+        </tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(model => model.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(model => model.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(model => model.Age)
+            </td>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Works) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            @*<td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Age)
-            </td>*@
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.Works)
+        {
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(modelItem => item.Title)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(modelItem => item.PublicationDate)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(modelItem => item.Description)
+                </th>
+            </tr>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PublicationDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                @*<td>
+                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                </td>*@
+            </tr>
+        }
     </tbody>
 </table>
