--- a/LMSGroupOne/Views/MainNavigation/Activity.cshtml
+++ b/LMSGroupOne/Views/MainNavigation/Activity.cshtml
@@ -13,7 +13,7 @@
 
     @if (User.IsInRole("Teacher"))
     {
-        <button id="editButtonId" data-item-id=@Model.Id data-item-type=@((int)(NodeType.course)) class="btn btn-outline-primary">Edit</button>
+        <button id="editButtonId" data-item-id=@Model.Id data-item-type=@((int)(NodeType.activity)) class="btn btn-outline-primary">Edit</button>
     }
 
 </div>
