Search makes call to both works and author. Search on Name and Title and returns. Some duplicates could be solved with group by.

--- a/LMSGroupOne/Views/Authors/GetAuthors.cshtml
+++ b/LMSGroupOne/Views/Authors/GetAuthors.cshtml
@@ -9,6 +9,8 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+
 <table class="table">
     <thead>
         <tr>
@@ -21,41 +23,47 @@
             <th>
                 @Html.DisplayNameFor(model => model.Age)
             </th>
-            @*<th>
-                @Html.DisplayNameFor(model => model.DateOfBirth)
-            </th>
             <th>
-                @Html.DisplayNameFor(model => model.DateOfDeath)
-            </th>*@
+                @Html.DisplayNameFor(model => model.Works)
+
+            </th>
+            @*<th>
+                    @Html.DisplayNameFor(model => model.DateOfBirth)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.DateOfDeath)
+                </th>*@
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Age)
-            </td>
-            @*<td>
-            @Html.DisplayFor(modelItem => item.DateOfBirth)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateOfDeath)
-        </td>*@
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            @Html.ActionLink("Get works", "GetWorks", "Works", new { id=item.Id })
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Id)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Age)
+                </td>
+                <td>
+                    @foreach (var work in item.Works)
+                    {
+                        <span>Title:<b> @work.Title.</b>  &emsp;  Description: @work.Description </span><br>
+                    }
 
-        </td>
-        </tr>
-}
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                    @Html.ActionLink("Get works", "GetWorks", "Works", new { id = item.Id })
+
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
