--- a/LMSGroupOne/Views/Activity/Create.cshtml
+++ b/LMSGroupOne/Views/Activity/Create.cshtml
@@ -12,8 +12,12 @@
 <div class="row">
     <div class="col-md-4">
         <form id="formId" asp-action="Create">
-            <input type="hidden" asp-for="Success">
-            <input type="hidden" asp-for="ReturnId">
+            <!--
+
+    <input type="hidden" asp-for="Success">
+    <input type="hidden" asp-for="ReturnId">
+    -->
+
             <input type="hidden" asp-for="ModuleId" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -28,11 +32,11 @@
             </div>
 
             @*<div class="form-group">
-                <label asp-for="ActivityTypeId" class="control-label"> Activity types</label>
-                <select class="form-control" asp-for="ActivityTypeId" asp-items="@(new SelectList(ViewBag.activityTypes,"Id","Name"))">
-                    <option selected="selected">Select type</option>
-                </select>
-            </div>*@
+            <label asp-for="ActivityTypeId" class="control-label"> Activity types</label>
+            <select class="form-control" asp-for="ActivityTypeId" asp-items="@(new SelectList(ViewBag.activityTypes,"Id","Name"))">
+                <option selected="selected">Select type</option>
+            </select>
+        </div>*@
 
             <div class="form-group">
                 <label asp-for="ActivityTypeId" class="control-label">Activity types</label>
@@ -51,13 +55,11 @@
                 <input asp-for="EndDate" class="form-control" />
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
-            @Html.DisplayFor(model => model.Message)
+
+            <input type="submit" value="New" class="btn btn-primary" />
+           
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
